# ssh-terminal

./: .gitignore  AGENTS.md  README.md  README_ZH.md  STATUS.md  Shortcuts.md  TYPES_CONSISTENCY_CHECK.md  build-win.ps1  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  wrangler.jsonc
.claude/: settings.local.json
.gemini/: setttings.json
.github/workflows/: build-and-push-aliyun.yml  build-multi-platform.yml  build-ssh-terminal-web.yml  deploy-website.yml  deploy.yml
docs/: AI_FEATURES.md  AI_FEATURES_EN.md  ARCHITECTURE.md  ARCHITECTURE_EN.md  CODE_STYLE.md  CODE_STYLE_EN.md  DEVELOPMENT.md  DEVELOPMENT_EN.md  DOCKER_DEPLOYMENT.md  DOM_TO_SVG.md  HOW_TO_ADD_KEYBINDING.md  RECORDING.md  RECORDING_EN.md  SECURITY.md  SECURITY_EN.md  Shortcuts.md  THEMES.md  THEMES_EN.md  TROUBLESHOOTING.md  TROUBLESHOOTING_EN.md  Tauri_Naming_Conventions.md  ai-cache-flowchart.md  ai-cache-integration.md
locales/: en.json  zh-CN.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ai/: history.rs  manager.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/audio/: capturer.rs
src-tauri/src/commands/: ai.rs  ai_history.rs  app_settings.rs  audio.rs  keybindings.rs  mod.rs  recording.rs  records.rs  session.rs  sftp.rs  storage.rs
src-tauri/src/config/: keybindings.rs  mod.rs  storage.rs
src-tauri/src/database/: schema.rs
src-tauri/src/database/repositories/: download_records.rs  mod.rs  ssh_session_repository.rs  upload_records.rs
src-tauri/src/models/: sync.rs  user_auth.rs
src-tauri/src/services/: api_client.rs  auth_service.rs  sync_service.rs
src-tauri/src/sftp/: client.rs  manager.rs  mod.rs
src-tauri/src/ssh/: backend.rs  connection.rs  manager.rs  mod.rs  session.rs
src-tauri/src/ssh/backends/: mod.rs  russh.rs  system_ssh.rs
src-tauri/src/ssh/pty/: desktop.rs  mobile.rs  mod.rs
src/components/: AICachePanel.css  AICachePanel.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/ai/: AIConversationHistory.css  AIConversationHistory.tsx
src/components/devtools/: DevToolsDebug.tsx  DevToolsFloatingButton.tsx  ElementSelector.tsx
src/components/keybindings/: KeybindingEditor.tsx  KeybindingRecorder.tsx  KeybindingsSettings.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/mobile/: MobileLayout.tsx  MobileSessionList.tsx
src/config/: defaultKeybindings.ts  themes.ts
src/hooks/: useScreenshot.ts
src/lib/: globalKeyHandler.ts  keybindingActions.ts  keybindingParser.ts  screenshot.ts
src/pages/: AIChatPage.tsx  Components.tsx  Dashboard.tsx  DownloadRecords.tsx  Features.tsx  SessionManager.tsx  Settings.tsx  SftpManager.tsx  Terminal.tsx  UploadRecords.tsx
src/store/: aiStore.ts  authStore.ts  devtoolsStore.ts  keybindingStore.ts  recordingStore.ts  sessionStore.ts  sftpStore.ts  syncStore.ts  terminalConfigStore.ts  terminalStore.ts  userProfileStore.ts
src/types/: ai.ts  keybinding.ts  recording.ts  sftp.ts  ssh.ts  sync.ts  terminal.ts
ssh-terminal-docs/: .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README-zh.md  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite-plugin-mdx-components.ts  vite.config.lib.ts  vite.config.ts  wrangler.toml
ssh-terminal-docs/src/: App.tsx  index.css  index.ts  main.tsx  react-docs-ui.d.ts
ssh-terminal-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build-musl.sh  docker-compose.yml
ssh-terminal-server/.claude/: settings.local.json
ssh-terminal-server/config/: development.toml  development.toml.example  production.toml  production.toml.example
ssh-terminal-server/docs/: README.md
ssh-terminal-server/docs/api/: Postman_API_Testing_Guide.md  README.md  SSH_Terminal_API.postman_collection.json  api-overview.md  authentication.md
ssh-terminal-server/docs/api/endpoints/: public.md
ssh-terminal-server/docs/api/examples/: frontend-integration.md
ssh-terminal-server/docs/deployment/: docker-compose.md  environment-variables.md
ssh-terminal-server/docs/development/: getting-started.md  project-structure.md
ssh-terminal-server/docs/sql/: README.md  mysql.sql  postgres.sql  sqlite.sql
ssh-terminal-server/src/: cli.rs  db.rs  error.rs  main.rs
ssh-terminal-server/src/config/: app.rs  auth.rs  database.rs  mod.rs  redis.rs  server.rs
ssh-terminal-server/src/domain/: mod.rs
ssh-terminal-server/src/domain/dto/: auth.rs  mod.rs  ssh.rs  sync.rs  user.rs
ssh-terminal-server/src/domain/entities/: mod.rs  ssh_sessions.rs  users.rs
ssh-terminal-server/src/domain/vo/: auth.rs  health.rs  mod.rs  ssh.rs  sync.rs  user.rs
ssh-terminal-server/src/handlers/: auth.rs  email.rs  health.rs  mod.rs  ssh_session.rs  sync.rs  user_profile.rs
ssh-terminal-server/src/infra/: mod.rs
ssh-terminal-server/src/infra/mail/: mailer.rs
ssh-terminal-server/src/infra/middleware/: auth.rs  logging.rs  mod.rs  user_id.rs
ssh-terminal-server/src/infra/redis/: errors.rs  mod.rs  redis_client.rs  redis_key.rs
ssh-terminal-server/src/repositories/: mod.rs  ssh_session_repository.rs  user_profile_repository.rs  user_repository.rs
ssh-terminal-server/src/services/: auth_service.rs  mail_service.rs  mod.rs  sync_service.rs
ssh-terminal-server/src/utils/: encryption.rs  i18n.rs  jwt.rs  mod.rs
ssh-terminal-web/: .env.development  .env.example  .env.production  .env.production.example  .eslintrc-auto-import.json  .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
ssh-terminal-web/src/: App.vue  components.d.ts  style.css  vite-env.d.ts
ssh-terminal-website/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ssh-terminal-website/src/: App.tsx  main.tsx  style.css
web-rust-template-project/: Cargo.toml
web-rust-template-project/src/: main.rs
(+185 files in other folders)
