[package]
name = "ssh-terminal"
version = "0.1.0"
description = "SSH Terminal - A modern SSH client"
authors = ["shenjianZ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH相关 - 直接使用系统SSH命令，无需外部库

# 跨平台 SSH 实现（russh）
russh = { version = "0.55", features = ["default"] }
# russh-keys 通常包含在 russh 中，如果需要单独引用：
# russh-keys = { version = "0.55", features = ["default"] }
async-trait = "0.1"
bytes = "1.5"
ssh-key = "0.6"  # 用于 SSH 密钥处理

# 异步运行时
tokio = { version = "1.35", features = ["full", "net", "io-util"] }

# PTY支持（跨平台）
portable-pty = "0.8"

# 工具库
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 加密相关
aes-gcm = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
base64 = "0.21"


