[package]
name = "ssh-terminal"
version = "0.3.0"
description = "SSH Terminal - A modern SSH client"
authors = ["shenjianZ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1.35", features = ["full", "net", "io-util"] }

# 工具库
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"

# 加密相关
aes-gcm = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
base64 = "0.21"

# AWS 加密库 - Android 兼容性修复
aws-lc-sys = "0.36"

# SSH相关 - 跨平台 SSH 实现（所有平台包括 Android）
russh = { version = "0.55", features = ["default"] }
russh-sftp = "2.1.1"  # SFTP 协议支持
async-trait = "0.1"
bytes = "1.5"
ssh-key = "0.6"  # 用于 SSH 密钥处理

# 桌面平台依赖
[target.'cfg(not(target_os = "android"))'.dependencies]
# PTY支持（仅桌面平台）
portable-pty = "0.8"

# 移动端依赖
[target.'cfg(target_os = "android")'.dependencies]
# 移动端使用简化的 PTY 实现（占位符）
