[package]
name = "ssh-terminal"
version = "1.1.0"
description = "SSH Terminal - A modern SSH client"
authors = ["shenjianZ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1.35", features = ["full", "net", "io-util"] }
tokio-util = "0.7"
scopeguard = "1.2"

# 工具库
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
secrecy = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"

# 加密相关
aes-gcm = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
base64 = "0.21"
pbkdf2 = "0.12"
sha2 = "0.10"

# AWS 加密库 - Android 兼容性修复
aws-lc-sys = "0.36"

# SSH相关 - 跨平台 SSH 实现（所有平台包括 Android）
russh = { version = "0.55", features = ["default"] }
russh-sftp = "2.1.1"  # SFTP 协议支持
async-trait = "0.1"
bytes = "1.5"
ssh-key = "0.6"  # 用于 SSH 密钥处理

# 音频捕获相关
cpal = "0.15"           # 跨平台音频库
rubato = "0.14"         # 高质量重采样
crossbeam-channel = "0.5"  # 高性能线程通信
hound = "3.5"           # WAV 文件写入（开发调试用）

# AI 相关
reqwest = { version = "0.12", features = ["json", "stream"] }  # HTTP 客户端（AI API 调用）
futures = "0.3"  # 异步流处理
jsonwebtoken = "9"  # JWT 解析

# 数据库相关
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }

# 桌面平台依赖
[target.'cfg(not(target_os = "android"))'.dependencies]
# PTY支持（仅桌面平台）
portable-pty = "0.8"

# 移动端依赖
[target.'cfg(target_os = "android")'.dependencies]
# 移动端使用简化的 PTY 实现（占位符）

# Windows 音频捕获依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
] }


# ==========================================
# Tauri 客户端编译优化配置
# ==========================================

# 1. 开发环境 (cargo tauri dev)
# 解决 Windows 链接器 PDB 报错，并大幅提升二次编译速度
[profile.dev]
incremental = true # 开启增量编译

[profile.dev.package."*"]
debug = false      # 关键：第三方依赖不生成调试符号（这就是解决报错的核心）
opt-level = 1      # 稍微优化依赖库，避免界面卡顿（特别是加密和绘图部分）

# 2. 生产环境 (cargo tauri build)
# 针对桌面端应用的体积和性能优化
[profile.release]
codegen-units = 1  # 牺牲编译速度，换取更小的体积和更快的运行速度
lto = true         # 开启链接时优化 (Link Time Optimization)
opt-level = "z"    # 极致优化体积 (也可以改成 "s")
panic = "abort"    # 发生 panic 直接退出，移除堆栈展开逻辑（减小体积）
strip = true       # 自动剥离符号文件，防止反汇编并减小体积
